--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Abhay Kumar - Portfolio</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background: #fdfefe;
+      color: #222;
+      line-height: 1.6;
+    }
+    header {
+      background: linear-gradient(to right, #141e30, #243b55);
+      color: white;
+      padding: 30px 40px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.8em;
+      font-weight: 700;
+    }
+    header p {
+      font-size: 1.3em;
+      margin-top: 10px;
+    }
+    nav {
+      margin-top: 20px;
+    }
+    nav a {
+      color: #fdd835;
+      margin: 0 12px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #fff176;
+    }
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: 20px auto;
+      background: #ffffff;
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
+      border-radius: 12px;
+    }
+    h2 {
+      border-bottom: 3px solid #3498db;
+      padding-bottom: 12px;
+      margin-bottom: 30px;
+      color: #2c3e50;
+      font-size: 1.8em;
+      font-weight: 700;
+    }
+    .skills span, .contact span {
+      display: inline-block;
+      margin: 8px 10px;
+      background: #e1f5fe;
+      color: #0277bd;
+      padding: 10px 14px;
+      border-radius: 20px;
+      font-size: 0.95em;
+      font-weight: bold;
+    }
+    ul li {
+      margin-bottom: 12px;
+    }
+    footer {
+      background: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px 10px;
+    }
+    a {
+      color: #1565c0;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Abhay Kumar</h1>
+    <p>Data Analyst | Web Developer | B.Tech Mathematics & Computing</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#education">Education</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>B.Tech student at NSUT with interests in Data Analytics, Web Development, and Quant Research. Experienced with alpha modeling, dashboarding, and frontend development. Develop and implement AI-driven image processing and generative solutions using LLMs. Design full-stack applications integrating image generation/enhancement models using React (Frontend) and Express.js (Backend).</p>
+  </section>
+
+  <section id="skills">
+    <h2>Skills</h2>
+    <div class="skills">
+      <strong>Languages:</strong> <span>Python</span><span>SQL</span><span>R</span><span>C++</span><span>Java</span><br>
+      <strong>Tools:</strong> <span>Power BI</span><span>Excel</span><span>Git</span><span>Replit</span><span>Tableau (basic)</span><br>
+      <strong>Web:</strong> <span>HTML</span><span>CSS</span><span>JavaScript</span><br>
+      <strong>Concepts:</strong> <span>Data Analysis</span><span>DBMS</span><span>OS</span><span>Linux</span><span>ML</span><span>A/B Testing</span>
+    </div>
+  </section>
+
+  <section id="experience">
+    <h2>Experience</h2>
+    <p><strong>WorldQuant Brain</strong> – Research Consultant Trainee (IQC Gold Level), 2025<br>
+    Built and evaluated alpha models using financial data in WebSim.</p>
+
+    <p><strong>CodeChef NSUT Chapter</strong> – Web Team Member, 2023–Present<br>
+    Updated site content, implemented JS features, and set up Google Analytics.</p>
+
+    <p><strong>E-Cell NSUT</strong> – PR Volunteer, 2022–Present<br>
+    Managed outreach and contributed to data analysis and feedback.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>Project Management System:</strong> Frontend app using HTML, CSS, JS to manage employees and tasks.</li>
+      <li><strong>JEE/NEET Solver Bot:</strong> AI chatbot using Replit and OpenRouter API to solve exam questions.</li>
+      <li><strong>Sales Dashboard:</strong> Power BI dashboard with trends and filters for delivery app data.</li>
+      <li><strong>Linux Mint OS Analysis:</strong> Studied OS memory usage and usability compared to other distros.</li>
+    </ul>
+  </section>
+
+  <section id="education">
+    <h2>Education</h2>
+    <p><strong>Netaji Subhas University of Technology, Delhi</strong> – B.Tech. in Mathematics and Computing, Nov 2022 – Present<br>
+    CGPA: 7.23 (Till 5th Sem)</p>
+
+    <p><strong>Govt. Boys Sr. Sec. School, Janakpuri</strong><br>
+    12th: 88.2%, 10th: 86.6%</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <div class="contact">
+      <span>Email: a.kumarabhay2008@gmail.com</span>
+      <span>Phone: +91 9810472409</span>
+      <span><a href="https://linkedin.com/in/abhay-kumar-4648b9260" target="_blank">LinkedIn</a></span>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Abhay Kumar. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
